# nik-theme

./: CMakeLists.txt  PKGBUILD
sddm-theme/: metadata.desktop  theme.conf.cmake
yakuake/: CMakeLists.txt
yakuake/nik-dark/: CMakeLists.txt  tabs.skin  title.skin
